--- a/data/benefits/openfisca/antony_aide_depart_sejour_adapte.yml
+++ b/data/benefits/openfisca/antony_aide_depart_sejour_adapte.yml
@@ -4,7 +4,7 @@ description: >
   Une aide financière aux séjours de vacances nécessitant une adaptation pour les personnes en situation de handicap. Ce dispositif s'adresse aux adultes et enfants résidents sur Antony.
 conditions:
 link: https://www.ville-antony.fr/handicap
-prefix: l'
+prefix: l’
 type: bool
 floorAt: 10
 entity: individus
