--- a/data/benefits/openfisca/antony_bourse_conservatoire.yml
+++ b/data/benefits/openfisca/antony_bourse_conservatoire.yml
@@ -4,7 +4,7 @@ description: >
   Aide pour couvrir les frais d'inscription au conservatoire de Vallée Sud - Grand Paris pour un ou plusieurs enfants dont les parents habitent à Antony et sous conditions de ressources.
 conditions:
 link: https://www.ville-antony.fr/bourses-communales#conservatoire
-prefix: l'
+prefix: l’
 type: bool
 floorAt: 10
 entity: individus
