--- a/data/benefits/openfisca/antony_bourse_famille_nombreuse.yml
+++ b/data/benefits/openfisca/antony_bourse_famille_nombreuse.yml
@@ -4,9 +4,9 @@ description: >
   Bourse facilitant l'accès aux frais de garde et aux loisirs municipaux.
   La première demande doit être effectuée avant le premier anniversaire du troisième enfant puis une seconde demande au cours de la deuxième année du troisième enfant.
 conditions:
-  - Avoir habiter au minimum 1 an dans la ville de Antony
+  - Avoir habiter au minimum 1 an dans la ville de Antony.
 link: https://www.ville-antony.fr/bourses-communales#famillesnombreuses
-prefix: l'
+prefix: l’
 type: float
 unit: "€"
 floorAt: 10
