fix:  quelques erreurs d'implémentations

--- a/data/benefits/openfisca/antony_bourse_famille_nombreuse.yml
+++ b/data/benefits/openfisca/antony_bourse_famille_nombreuse.yml
@@ -10,6 +10,6 @@ prefix: l’
 type: float
 unit: "€"
 floorAt: 10
-entity: individus
+entity: familles
 openfiscaPeriod: thisMonth
 periodicite: annuelle
