--- a/data/benefits/openfisca/antony_aide_depart_sejour_adapte.yml
+++ b/data/benefits/openfisca/antony_aide_depart_sejour_adapte.yml
@@ -7,6 +7,6 @@ link: https://www.ville-antony.fr/handicap
 prefix: l’
 type: bool
 floorAt: 10
-entity: individus
+entity: familles
 openfiscaPeriod: thisMonth
 periodicite: autre
