--- a/data/benefits/openfisca/antony_bourse_conservatoire.yml
+++ b/data/benefits/openfisca/antony_bourse_conservatoire.yml
@@ -7,6 +7,6 @@ link: https://www.ville-antony.fr/bourses-communales#conservatoire
 prefix: l’
 type: bool
 floorAt: 10
-entity: individus
+entity: familles
 openfiscaPeriod: thisMonth
 periodicite: autre
