--- a/data/benefits/javascript/caf-tarn-aide-bafa-approfondissement.yml
+++ b/data/benefits/javascript/caf-tarn-aide-bafa-approfondissement.yml
@@ -1,9 +1,8 @@
-label: aides au BAFA pour une session de formation générale, d'approfondissement
-  ou de qualification
+label: aides au BAFA pour une session de formation générale ou d'approfondissement
 institution: caf_tarn
 description: Les aides à la formation du BAFA sont des aides locales mise à
   disposition par la CAF du Tarn pour vous aider à financer votre session
-  générale, d’approfondissement ou de qualification en complément de l'aide
+  générale ou d’approfondissement/perfectionnement, en complément de l'aide
   nationale apportée par la CAF.
 prefix: l’
 conditions_generales:
@@ -13,10 +12,6 @@ conditions_generales:
   - type: departements
     values:
       - "81"
-  - type: quotient_familial
-    value: 800
-    operator: "<="
-    period: month
 profils: []
 conditions:
   - 'Vous adresser au service Jeunesse & Sports de la DDCSPP de votre
@@ -30,7 +25,7 @@ type: float
 unit: €
 periodicite: ponctuelle
 legend: maximum
-montant: 550
-link: https://caf.fr/allocataires/caf-du-tarn/offre-de-service/vie-professionnelle/aide-au-bafa
-form: https://caf.fr/sites/default/files/medias/811/Fichiers%20allocataires/Imprim%C3%A9%20BAFA%20CAF81.pdf
-instructions: https://caf.fr/allocataires/caf-du-tarn/offre-de-service/vie-professionnelle/aide-au-bafa
+montant: 300
+link: https://www.caf.fr/allocataires/caf-du-tarn/offre-de-service/vie-professionnelle/bafa-bafd
+form: https://acrobat.adobe.com/id/urn:aaid:sc:EU:0137c07b-e4c6-49df-af18-47f3f603786e
+instructions: https://www.caf.fr/allocataires/caf-du-tarn/offre-de-service/vie-professionnelle/bafa-bafd
