--- a/data/benefits/openfisca/antony_aide_depart_sejour_adapte.yml
+++ b/data/benefits/openfisca/antony_aide_depart_sejour_adapte.yml
@@ -1,12 +1,18 @@
-label: Aide aux départs en séjours de vacances
+label: aide aux départs en séjours de vacances
 institution: ville_antony
-description: >
-  Une aide financière aux séjours de vacances nécessitant une adaptation pour les personnes en situation de handicap. Ce dispositif s'adresse aux adultes et enfants résidents sur Antony.
+description: |
+  Une aide financière aux séjours de vacances nécessitant une adaptation pour les
+  personnes en situation de handicap. Ce dispositif s'adresse aux adultes et
+  enfants résidents sur Antony.
 conditions:
+  - Résider sur Antony.
 link: https://www.ville-antony.fr/handicap
-prefix: l’
-type: bool
-floorAt: 10
+form: https://www.ville-antony.fr/images/Actualite/2022/septembre/Handicap/imprime-2022-aide-aux-sejours-adaptes.pdf
+prefix: "l’"
+floorAt: 1
+type: float
+unit: "€"
+periodicite: ponctuelle
+legend: ""
 entity: familles
 openfiscaPeriod: thisMonth
-periodicite: autre
