--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "express-validator": "^6.13.0",
     "haversine": "^1.1.1",
     "iframe-resizer": "^4.3.2",
-    "jamstack-loader": "^0.0.9",
+    "@betagouv/jamstack-loader": "^1.0.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.0",
     "lodash.clonedeep": "^4.5.0",
