--- a/data/benefits/openfisca/antony_bourse_communale.yml
+++ b/data/benefits/openfisca/antony_bourse_communale.yml
@@ -1,12 +1,15 @@
-label: Bourse communale pour la restauration scolaire
+label: bourse communale pour la restauration scolaire
 institution: ville_antony
 description: >
   Une aide à la restauration scolaire pour les élèves d’Antony scolarisés dans un collège ou un lycée.
 conditions:
 link: https://www.ville-antony.fr/bourses-communales#restaurationscolaire
-prefix: l’
-type: bool
-floorAt: 10
+form: https://www.espace-citoyens.net/ville-antony/espace-citoyens/Home/AccueilPublic
+prefix: "l’"
+floorAt: 1
+type: float
+unit: "€"
+periodicite: ponctuelle
+legend: ""
 entity: familles
 openfiscaPeriod: thisMonth
-periodicite: autre
