--- a/openfisca/requirements.txt
+++ b/openfisca/requirements.txt
@@ -1,6 +1,7 @@
 gunicorn>=21.2.0
-pytest==7.2.2
-Openfisca-France==168.0.14
-Openfisca-Core[web-api]==41.5.5
-OpenFisca-France-Local[excel-reader]==6.14.0
-Openfisca-Paris==5.5.5
+pytest==8.3.3
+Openfisca-France==169.5.0
+Openfisca-Core[web-api]==43.2.4
+OpenFisca-France-Local[excel-reader]==6.17.1
+Openfisca-Paris==5.5.9
+typing_extensions==4.12.2
