--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,18 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  health-check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check Sentry Status
+        id: sentry-check
+        run: |
+          SENTRY_STATUS=$(curl -s -o /dev/null -w "%{http_code}" ${{ secrets.SENTRY_URL }})
+          echo "status=$SENTRY_STATUS" >> $GITHUB_OUTPUT
+          if [ "$SENTRY_STATUS" != "200" ]; then
+            curl -i -X POST -H 'Content-Type: application/json' -d '{"text": ":icon-warning: [équipe-tech] Sentry semble ne plus fonctionner ([lien](https://github.com/betagouv/aides-jeunes/actions/workflows/ci.yml?query=branch%3Amain+is%3Afailure))"}' ${{ secrets.MATTERMOST_ALERTING_URL }}
+            exit 1
+          fi
   install:
     name: Install
     runs-on: ubuntu-20.04
