--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
     "haversine": "^1.1.1",
-    "iframe-resizer": "^5.3.2",
+    "@iframe-resizer/parent": "^5.3.2",
+    "@iframe-resizer/child": "^5.3.2",
     "jamstack-loader": "^0.0.9",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.0",
